# power-ppa-forge

./: AGENTS.md  PRODUCT_BRIEF.md  README.md  STATUS.md  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
docs/: SYSTEM_MAP.md  first-pr.md
mechanism/: MECHANISM-v0.md  leakage_bounds.yaml
paper/: power-ppa-forge.md
power_ppa_forge/: __init__.py  cli.py  model.py  models.py  scoring.py  simulator.py
reports/: capital_impact.jsonl  capital_impact.md
runs/v0_baseline/: allocation.json  payments.json  receipts.json
scenarios/: v0_1gw_3offtakers.json
schemas/: scenario.schema.json
scripts/: check_notional_disclosure.py  validate_leakage_bound.py  validate_schemas.py  voice_lint.py
specs/0001-foundation/: acceptance.md  design.md  requirements.md  tasks.md
specs/0002-design/: acceptance.md  design.md  ledger.md  requirements.md  tasks.md
tests/: test_cli.py  test_simulator.py
